--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,25 +1,14 @@
 <!-- TOPページ -->
 <div class="row justify-content-center">
-  <div class="col-md-6">
-
-    <h1>welcome to
-      <i class="fas fa-book"></i>
-      Bookers!!
-    </h1>
-
-    <p>In<i class="fas fa-book"></i><b>Bookers</b>,</p>
-    <p><br>you can share and exchange your opinions , inpressions , and emotions</p>
-    <p>about various books!</p>
-
-    <div class="btn-box col-10 mx-auto">
-      <div class="row">
-        <%= link_to "Log in", new_user_session_path ,class: "btn btn-info" %>
-      </div>
-      <div class="row">
-        <%= link_to "Sign up", new_user_registration_path ,class: "btn btn-success" %>
-      </div>
+  <div class="btn-box col-10 mx-auto">
+    <div class="row">
+      <%= link_to "管理者用", new_admin_session_path ,class: "btn btn-info" %>
     </div>
+    
+    <div class="row">
+      <%= link_to "お客様用", new_customer_registration_path ,class: "btn btn-info" %>
+    </div>
+    
   </div>
 </div>
 
-<%= render 'layouts/footer' %>
