--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,49 +1,59 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :名前 %><br />
+    <%= f.label :名前 %>
+    <%= f.label :（姓） %>
     <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+    <%= f.label :（名） %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
   </div>
 
   <div class="field">
-    <%= f.label :フリガナ %><br />
+    <%= f.label :フリガナ %>
+    <%= f.label :（セイ） %>
     <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+    <%= f.label :（メイ） %>
+    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
   </div>
 
   <div class="field">
-    <%= f.label :メールアドレス %><br />
+    <%= f.label :メールアドレス %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :住所 %><br />
+    <%= f.label :住所 %>
     <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
   </div>
-
+  
   <div class="field">
-    <%= f.lebel :telephone_number , "電話番号(ハイフンなし)" %><br />
+    <%= f.label :postal_code, "電話番号(ハイフンなし)" %>
     <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
   </div>
 
   <div class="field">
-    <%= f.label :password ,"パスワード(６文字以上)" %>
+    <%= f.label :password, "パスワード(６文字以上)" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password ,パスワード(確認用) %><br />
+    <%= f.label :password_confirmation, "パスワード(確認用)" %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "新規登録" %>
+    <%= f.submit "新規登録" ,class: "btn btn-success" %>
   </div>
 <% end %>
 
-<%= render "public/shared/links" %>
+<h2>既に登録済みの方</h2>
+<span>
+<%= render "public/shared/links" %>からログインしてください。
+</span>
+
