--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,21 +1,39 @@
 <h1>マイページ</h1>
 
+<h1>登録情報</h1>
+
+<%= link_to "編集する", edit_customer_registration_path, class: "btn btn-success" %>
+
 
 <table class = "table table-striped">
   <tbody>
     <% if @customer.present? %>
       <tr>
-        <th>姓</th>
-        <td><%= customer.last_name %></td>
+        <th>氏名</th>
+        <td><%= @customer.last_name %>　<%= @customer.first_name %></td>
+      </tr>
+   　  <tr>
+        <th>カナ</th>
+        <td><%= @customer.last_name_kana %>　<%= @customer.first_name_kana %></td>
+      </tr>
+       <tr>
+        <th>郵便番号</th>
+        <td><%= @customer.postal_code %>
+      </tr>
+       <tr>
+        <th>住所</th>
+        <td><%= @customer.address %>
       </tr>
       <tr>
-        <th>名</th>
-        <td><%= customer.first_name %></td>
+        <th>電話番号</th>
+        <td><%= @customer.telephone_number %>
       </tr>
+      <tr>
+        <th>メールアドレス</th>
+        <td><%= @customer.last_name %>
+      </tr>
+
     <% end %>
   </tbody>
 </table>
 
-<%= link_to edit_customer_path(@customer), class: "btn btn-light btn-outline-dark" do %>
-  <i class="fas fa-user-cog"></i>
-<% end %>
